order_system/k8s/ordersystem_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: hyun
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem
  template:
    metadata:
      labels:
        app: ordersystem
    spec:
      containers:
        - name: ordersystem
        # aws ecr주소 사용하기. ecr : 이미지 레파지토리
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/seunghyun-ordersystem:latest
          ports:
          - containerPort: 8080
          resources:
          # 최대 자원 할당량
            limits:
              cpu: "0.2"
              memory: "250Mi"
            requests:
              cpu: "0.2"
              memory: "250Mi"
