order_system/k8s/ordersystem_service.yml

apiVersion: v1
kind: Service
metadata:
  name: ordersystem-service
  namespace: hyun
spec:
  type: ClusterIP
  selector:
    app: ordersystem
  ports:
  - name: http
    port: 80
    targetPort: 8080
